Fix bootstrap_distfile_test.
RELNOTES: None.
PiperOrigin-RevId: 891712220
Change-Id: I50dd54497e21ae02573ff6c7e60098ea28b514ca